# bbtrace

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  avgbbsize.c  build.cmd  build7.cmd  controlflow.c  controlflow.h  env.cmd  envset.cmd  main.py  make.cmd  make7.cmd  reload.cmd  requirements.txt  run.cmd  run7.cmd  setenv.cmd  test.cmd  tracedump.c  tracelog.py  util.cmd
clients/: async_reader.h  bbtrace.c  bbtrace_core.c  bbtrace_core.h  bbtrace_data.h  bbtrace_flow.cpp  bbtrace_util.cpp  branchlut2.cpp  branchlut2.h  controlflow.c  controlflow.h  flame_graph.h  tracelog_reader.h
parselog/: CMakeLists.txt  buffer.cpp  buffer.h  buffer.hpp  flamegraph.h  logparser.cpp  logparser.h  logparser.hpp  logrunner.cpp  logrunner.h  logrunner.hpp  main.cpp  observer.hpp  parsebuffer.cpp  parsebuffer.h  parselog.cpp  serializer.cpp  serializer.h  threadinfo.hpp
parselog/analyzer/: grapher.cpp  parselog.cpp  printer.cpp
plugin/: bbtrace_plugin.py  main.py
plugin/bbtrace/: CallStackBuilder.py  Display.py  FlameGraphReader.py  InfoParser.py  TraceLog.py
revengi/: console.py  tracelog.py
samples/: instrace_x86.c
src/: bbtrace.c  bbtrace.cpp  bbtrace.h  bbtrace_core.c  bbtrace_core.h  codecache.c  codecache.h  datatypes.h  synchro.c  synchro.h  winapi.c  winapi.h  wrapping.c  wrapping.h
tests/: test_app.c  test_app.cpp  test_bbtrace.c  test_bbtrace.expect
tools/: JsonParser.php  TraceLog.py  dumpfunc.idc  jsonparser.py  main.py  peparser.php  tracelog.php  trans0.php
